--- a/versions.gradle
+++ b/versions.gradle
@@ -4,6 +4,10 @@
  **/
 ext.deps = [:]
 
+/**
+ * @param orig object to be deep copied
+ * @return deep copy of orig
+ */
 private static def deepCopy(orig) {
     OutputStream bos = new ByteArrayOutputStream()
     ObjectOutputStream oos = new ObjectOutputStream(bos)
@@ -15,88 +19,104 @@ private static def deepCopy(orig) {
 }
 
 def versions = [:]
-versions.support = '27.1.1'
-versions.arch_components = '1.1.1'
+
+versions.lifecycle = '2.0.0'
+versions.app_compat = '1.0.0'
+versions.material_design = '1.0.0'
+
+versions.firebase = [:]
+versions.firebase.ml_vision = '17.0.0'
+versions.firebase.core = '16.0.3'
+versions.crashlytics = '2.9.5'
+
+versions.constraint_layout = '1.1.3'
+versions.recyclerview = '1.0.0'
+
 versions.dagger = '2.16'
-versions.timber = '4.7.0'
+
+versions.rx = [:]
+versions.rx.java = '2.2.2'
+versions.rx.android = '2.1.0'
+
+versions.easy_permissions = '1.3.0'
+
+versions.timber = '4.7.1'
 versions.rxbinding = '2.1.1'
-versions.leak_canary = '1.5.4'
+versions.leak_canary = '1.6.1'
+versions.stetho = '1.5.0'
 versions.find_bugs_jsr305 = '3.0.2'
-versions.crashlytics = '2.9.3'
 
-versions.junit = '4.12'
-versions.espresso = '3.0.2'
-versions.runner = '1.0.2'
-
-versions.mockito = '2.7.19'
-versions.mockito_all = '1.10.19'
-
-def firebase = [:]
-firebase.core = '16.0.0'
-versions.firebase = deepCopy(firebase)
+//versions.retrofit = '2.4.0'
+//versions.okhttp = '3.11.0'
 
 def packages = [:]
-packages.crashlytics = 'com.crashlytics.sdk'
-packages.support = 'com.android.support'
-packages.android = 'com.google.android'
-packages.firebase = 'com.google.firebase'
-packages.dagger = 'com.google.dagger'
-packages.rxjava = 'io.reactivex.rxjava2'
-
-packages.retrofit = 'com.squareup.retrofit2'
-
+// Debug and diagnostic tools
+packages.crashlytics = 'com.crashlytics.sdk.android'
 packages.find_bugs = 'com.google.code.findbugs'
 packages.leak_canary = 'com.squareup.leakcanary'
+packages.stetho = 'com.facebook.stetho'
 
-packages.arch_prefix = 'android.arch'
+packages.app_compat = 'androidx.appcompat'
+packages.lifecycle = 'androidx.lifecycle'
+packages.android = 'com.google.android'
+packages.firebase = 'com.google.firebase'
+
+packages.constraint_layout = 'androidx.constraintlayout'
+packages.recyclerview = 'androidx.recyclerview'
+
+packages.dagger = 'com.google.dagger'
+packages.rxjava = 'io.reactivex.rxjava2'
 
 packages.test = 'com.android.support.test'
 packages.jwharton_prefix = 'com.jakewharton'
 packages.rxbinding2 = "${packages.jwharton_prefix}.rxbinding2"
 
-packages.espresso = 'com.android.support.test.espresso'
-
-
 def deps = [:]
 
-deps.crashlytics = "${packages.crashlytics}.android:crashlytics:${versions.crashlytics}"
 
-def support = [:]
-support.appcompat = "${packages.support}:appcompat-v7:${versions.support}"
-support.constraint = "${packages.support}.constraint:constraint-layout:1.1.2"
-support.recyclerview = "${packages.support}:recyclerview-v7:${versions.support}"
+// basic
+def basic = [:]
+basic.app_compat = "${packages.app_compat}:appcompat:${versions.app_compat}"
+basic.crashlytics = "${packages.crashlytics}:crashlytics:${versions.crashlytics}"
 
-support.design = "${packages.support}:design:${versions.support}"
-deps.support = support
+basic.ui = [:]
+basic.ui.constraint_layout = "${packages.constraint_layout}:constraintlayout:${versions.constraint_layout}"
+basic.ui.constraint_layout_solver = "${packages.constraint_layout}:constraintlayout-solver:${versions.constraint_layout}"
+basic.ui.recyclerview = "${packages.recyclerview}:recyclerview:${versions.recyclerview}"
 
-firebase.clear()
-firebase.core = "${packages.firebase}:firebase-core:${versions.firebase.core}"
-deps.firebase = firebase
+//com.google.android.material:material:1.0.0-alpha1
+basic.material_design = "${packages.android}.material:material:${versions.material_design}"
+
+basic.lifecycle = [:]
+basic.lifecycle.java = "${packages.lifecycle}:lifecycle-common-java8:${versions.lifecycle}"
+//deps.arch_core_testing = "${packages.arch_prefix}.core:core-testing:${versions.arch_components}"
+basic.lifecycle.extensions = "${packages.lifecycle}:lifecycle-extensions:${versions.lifecycle}"
+
+deps.basic = basic
 
 def dagger = [:]
 dagger.runtime = "${packages.dagger}:dagger:${versions.dagger}"
 dagger.compiler = "${packages.dagger}:dagger-compiler:${versions.dagger}"
 dagger.android_support = "${packages.dagger}:dagger-android-support:${versions.dagger}"
-dagger.android_support_processor = "${packages.dagger}:dagger-android-processor:${versions.dagger}"
+dagger.android_processor = "${packages.dagger}:dagger-android-processor:${versions.dagger}"
 deps.dagger = dagger
 
 def rx = [:]
-rx.java = "${packages.rxjava}:rxjava:2.1.10"
-rx.android = "${packages.rxjava}:rxandroid:2.0.2"
+rx.java = "${packages.rxjava}:rxjava:${versions.rx.java}"
+rx.android = "${packages.rxjava}:rxandroid:${versions.rx.android}"
 
 def rxbinding2 = [:]
 rxbinding2.support_v4 = "${packages.rxbinding2}:rxbinding-support-v4:${versions.rxbinding}"
 rxbinding2.appcompat_v7 = "${packages.rxbinding2}:rxbinding-appcompat-v7:${versions.rxbinding}"
 rxbinding2.design = "${packages.rxbinding2}:rxbinding-design:${versions.rxbinding}"
-rx.rxbinding2 = rxbinding2
+rx.binding = rxbinding2
 deps.rx = rx
 
-deps.find_bugs_jsr305 = "${packages.find_bugs}:jsr305:${versions.find_bugs_jsr305}"
+deps.firebase = [:]
+deps.firebase.core = "${packages.firebase}:firebase-core:${versions.firebase.core}"
+//deps.firebase.ml_vision = "${packages.firebase}:firebase-ml-vision:${versions.firebase.ml_vision}"
 
-deps.arch_lifecycle_java = "${packages.arch_prefix}.lifecycle:common-java8:${versions.arch_components}"
-deps.arch_core_testing = "${packages.arch_prefix}.core:core-testing:${versions.arch_components}"
-deps.arch_lifecycle_extension = "${packages.arch_prefix}.lifecycle:extensions:${versions.arch_components}"
-//deps.arch_lifecycle_rx_stream = "${packages.arch_prefix}.lifecycle:reactivestreams:${versions.arch_components}"
+deps.easy_permissions = "pub.devrel:easypermissions:${versions.easy_permissions}"
 
 deps.timber = "${packages.jwharton_prefix}.timber:timber:${versions.timber}"
 
@@ -105,28 +125,29 @@ leak_canary.debug = "${packages.leak_canary}:leakcanary-android:${versions.leak_
 leak_canary.release = "${packages.leak_canary}:leakcanary-android-no-op:${versions.leak_canary}"
 deps.leak_canary = leak_canary
 
-def espresso = [:]
-espresso.core = "${packages.espresso}:espresso-core:${versions.espresso}"
-espresso.contrib = "${packages.espresso}:espresso-contrib:${versions.espresso}"
-espresso.intents = "${packages.espresso}:espresso-intents:${versions.espresso}"
-deps.espresso = espresso
+deps.find_bugs_jsr305 = "${packages.find_bugs}:jsr305:${versions.find_bugs_jsr305}"
 
-def atsl = [:]
-atsl.runner = "com.android.support.test:runner:${versions.runner}"
-atsl.rules = "com.android.support.test:rules:${versions.runner}"
-deps.atsl = atsl
-
-def mockito = [:]
-mockito.core = "org.mockito:mockito-core:${versions.mockito}"
-mockito.all = "org.mockito:mockito-all:${versions.mockito_all}"
-deps.mockito = mockito
-
-deps.junit = "junit:junit:${versions.junit}"
+deps.test = [:]
+deps.test.junit = "junit:junit:4.12"
+deps.test.runner = "androidx.test:runner:1.1.0-alpha4"
 
 ext.deps = deps
 
 def build_versions = [:]
 build_versions.min_sdk = 21
-build_versions.target_sdk = 27
-build_versions.build_tools = "27.0.3"
+build_versions.target_sdk = 28
+build_versions.build_tools = "28.0.3"
 ext.build_versions = build_versions
+
+ext {
+    //APP VERSION
+    default_version_name = "0.0.2"
+
+    //keep this value for dev builds to be consistent with production builds
+    default_version_code = 3
+
+    retrieveVersionName = project.hasProperty('version_name') ? version_name : default_version_name
+
+    retrieveVersionCode =
+            project.hasProperty('version_code') ? version_code.toInteger() : default_version_code
+}
